tests/ui/enum_with_named_fields.stderr
error: repr_cast can only be applied to fieldless enums (enums with unit variants)
 --> tests/ui/enum_with_named_fields.rs:5:5
  |
5 |     Variant1 { x: u32, y: u32 },
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
